# ArcticGate

./: .gitignore  Makefile  docker-compose.yaml
configs/: config.toml  config2.toml  configSPS.toml  generate_config.py  generate_sps_config.py  pyproject.toml  system.toml
env/: standard.env
mosquitto/config/: mosquitto.conf
server/: .dockerignore  Dockerfile
server/pubsub/: CMakeLists.txt
server/pubsub/scripts/: generate_sample_config.py
server/pubsub/src/: main.c
server/pubsub/src/config/: configs.h  free.c  free.h  parser.c  parser.h  printer.c  printer.h
server/pubsub/src/pubsub/: collection.c  collection.h  publish.c  publish.h  publishUtil.c  publishUtil.h  server.c  server.h  serverUtils.c  serverUtils.h  stateMachine.c  subscribe.c  subscribe.h  subscribeUtil.c  subscribeUtil.h
server/pubsub/src/utils/: nodeIdMap.c  nodeIdMap.h
